Avoid overflow:auto for cf-auto-classed containers

--- a/app/assets/stylesheets/_main.scss
+++ b/app/assets/stylesheets/_main.scss
@@ -135,7 +135,6 @@ body {
   margin-top: $cf-30px;
   line-height: 2.225em;
   clear: both;
-  overflow: auto;
 
   [type="submit"] {
     margin: 0;
